added ranked endpoint
