# server/httpserver/start.go
@@ -52,8 +52,9 @@ func Start() {
 	mux.HandleFunc("GET /", handler.DocsPage)
 	mux.HandleFunc("GET /health", handler.Health(conf))
 
-	mux.HandleFunc("GET /history/{gameName}/{tagLine}", handler.GetHistory(conf))
+	mux.HandleFunc("GET /history/{puuid}", handler.GetHistory(conf))
 	mux.HandleFunc("GET /account/{gameName}/{tagLine}", handler.GetAccount(conf))
+	mux.HandleFunc("GET /rank/{server}/{puuid}", handler.GetRank(conf))
 
 	//
 	// Register global middleware.
