# server/riot/validators.go
@@ -41,3 +41,32 @@ func ValidateTagLine(tagLine string) error {
 
 	return nil
 }
+
+// Returns nil if and only if the given PUUID is valid. Otherwise, an error
+// is returned that describes the problem. The error is appropriate for a
+// plaintext error response.
+func ValidatePuuid(puuid string) error {
+	if (len(puuid) != 78) {
+		return errors.New("PUUIDs should be 78 ASCII characters")
+	}
+
+	// We could also regex the PUUID (the characters should be underscores,
+	// hyphens, letters, and numbers) but it's not really worth it right now.
+
+	return nil
+}
+
+// Returns nil if and only if the given server is valid. Otherwise, an error
+// is returned that describes the problem. The error is appropriate for a
+// plaintext error response.
+func ValidateServer(server string) error {
+	switch Server(server) {
+	case ServerBR1, ServerEUN1, ServerEUW1, ServerJP1, 
+	     ServerKR, ServerLA1, ServerLA2, ServerME1, 
+		 ServerNA1, ServerOC1, ServerPBE1, ServerRU, 
+		 ServerSG2, ServerTR1, ServerVN2:
+		return nil
+	default:
+		return errors.New("server '" + server + "' not recognized")
+	}
+}
